# driftGuard

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/driftguard/: __init__.py  _math.py  alerts.py  auditor.py  callback.py  corpus.py  detector.py  langgraph.py  runnable.py  schema.py  viz.py  windowed.py
src/driftguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_alerts.py  test_auditor.py  test_callback.py  test_corpus.py  test_detector.py  test_fps.py  test_integration.py  test_langgraph.py  test_math.py  test_runnable.py  test_viz.py  test_windowed.py
